service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter
  labels:
    app: nitter
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nitter
